--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
+  "name": "preparate_comipems",
+  "version": "1.0.0",
+  "description": "Proyecto FEPI",
+  "main": "gulpfile.js",
   "scripts": {
     "dev": "gulp"
   },
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
+    "bootstrap": "^5.3.0",
     "cssnano": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
@@ -13,7 +20,6 @@
     "gulp-sourcemaps": "^3.0.0",
     "gulp-terser-js": "^5.2.2",
     "sass": "^1.49.9",
-    "terser": "^4.8.0",
-    "bootstrap": "^5.3.0"
+    "terser": "^4.8.0"
   }
 }
